--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <section id="container">
         <h1 id="title">Calculatrice</h1>
 
         <section class="calculatrice">
