add erase function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="display"></div>
             <div class="calculatrice__body">
                 <div><input type="button" value="AC" onclick='reset(this)' /></div>
-                <div><input type="button" value="+/-" onclick='displayValue(this)' /></div>
+                <div><input type="button" value="CE" onclick='erase(this)' /></div>
                 <div><input type="button" value="%" onclick='displayValue(this)' /></div>
                 <div><input type="button" value="/" onclick='displayValue(this)' /></div>
                 <div><input type="button" value="7" onclick='displayValue(this)' /></div>
